<resources>
    <string name="app_name">Movie Catalog Submission 5</string>
    <string name="title_movie">Movies</string>
    <string name="title_tvshows">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="movie_name">Movie Name</string>
    <string name="release">Release</string>
    <string name="description">This is description</string>
    <string name="tab_movie">Movie</string>
    <string name="tab_tvshow">TV Show</string>
    <string name="poster_image">This is poster image</string>
    <string name="change_language_settings">Change language</string>
    <string name="backdrop_image">this is backdrop image</string>
    <string name="chart">Chart</string>
    <string name="popularity">111.111</string>
    <string name="original_title">Original title</string>
    <string name="original_language">en</string>
    <string name="overview">Overview</string>
    <string name="average">7.8</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="search">Search</string>
    <string name="movie_favorite">Movie Favorite</string>
    <string name="tvshow_favorite">TV Show Favorite</string>
    <string name="empty_content">No Content</string>
    <string name="widget">Widget</string>
    <string name="daily_notification">Daily notifications on or off</string>
    <string name="release_reminder">Release today reminder on or off</string>
    <string name="notification_settings">Notification settings</string>
    <string name="daily_reminder_notif_text">Back with us explore the best movies!</string>
    <string name="daily_reminder_notif_title">Movie CatalogueDB</string>
    <string name="release_today_title">New Movie Detected!</string>
    <string name="has_release_string">has released just now!</string>
    <string name="share">Share</string>
    <string name="poster_movie_catalogue">Poster Movie Catalogue</string>
    <string name="voters">Voters</string>
    <string name="not_found">Not Found</string>
    <string name="detail">Detail</string>
</resources>
