<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".details.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/blur_image"
            style="@style/PosterDetail"
            android:contentDescription="@string/poster_movie_catalogue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/lightGrey"
            android:contentDescription="@string/poster_movie_catalogue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blur_image" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/Item.TitleDetail"
            android:layout_width="0dp"
            android:layout_marginStart="0.1dp"
            android:layout_marginEnd="0.1dp"
            android:background="@drawable/bg_gradient_trans_white"
            android:paddingStart="20dp"
            android:paddingTop="40dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/blur_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_vote_average"
            style="@style/Item.Vote"
            app:layout_constraintStart_toEndOf="@+id/poster_image"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_popularity_tv"
            style="@style/VoteAverage"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_release_tv"
            style="@style/Item"
            android:layout_marginTop="16dp"
            android:text="@string/release"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/poster_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average" />

        <TextView
            android:id="@+id/tv_release"
            style="@style/Item"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/poster_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_tv" />

        <TextView
            android:id="@+id/tv_vote_average_tv"
            style="@style/Item"
            android:layout_marginTop="8dp"
            android:text="@string/voters"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/poster_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_release" />

        <TextView
            android:id="@+id/tv_popularity"
            style="@style/Item"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/poster_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_tv" />



        <TextView
            android:id="@+id/tv_description"
            style="@style/Item.Description"
            android:paddingBottom="10dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_image" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:borderWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_average"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

        <ProgressBar
            android:id="@+id/loading_detail"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:progressTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
